# spots

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: main.c
